styles/profile.module.css
.section {
    border-right: var(--border);
    padding-top: 15px;
    min-height: 100vh;
    color: var(--accents-7);
}

.profileTopContainer {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    margin: 0px auto;
    padding: var(--gap-double);
    border-bottom: var(--border);
}

.profileTop {
    position: relative;
    display: flex;
    flex: 0 0 auto;
    margin-bottom: 20px;
    box-sizing: border-box;
    gap: var(--space-large);
}

.infoContainer {
    display: flex;
    flex-direction: row;
    -webkit-box-align: center;
    gap: var(--gap)
}

.imageContainer {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
}

.avatarContainer {
    display: none;
    place-items: center;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    border: var(--border);
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.5);
}

.avatarContainer:hover {
    display: grid;
}

.profileImage {
    width: 100%;
    height: 100%;
}

.profileImage:hover~.avatarContainer {
    display: grid;
}

.modalBody {
    width: min(95vw, 600px);
    background-color: var(--background);
    border-radius: var(--radius-small);
}

.modalContent {
    width: 100%;
    flex-direction: column;
    min-height: calc(50vh);
    display: flex;
    align-items: center;
    justify-content: center;
    overflow-y: auto;
}

.requestHeader {
    display: flex;
    justify-content: space-between;
    height: 50px;
    padding: 0 var(--gap-half) 0 var(--gap-half);
    align-items: center;
    border-bottom: 2px solid var(--accents-2);
    width: 100%;
}

.requestHeader p {
    font-size: 18px;
    font-weight: 510;
}

.closeContainer {
    color: var(--accents-3);
    cursor: pointer;
    padding: var(--gap-half);
    border-radius: 50%
}

.nextContainer {
    color: var(--success);
    cursor: pointer;
    font-weight: 800;
    padding: var(--gap-half);
    border-radius: 50%
}

.backIcon {
    color: var(--accents-3);
    cursor: pointer;
    display: grid;
    place-items: center;
    padding: var(--gap-half);
    border-radius: 50%
}

.fileIcons {

    margin-bottom: var(--gap-double);
    position: relative;
    height: 100px;
    width: 100px;
    color: var(--success-light);
    margin-left: -50px;
}

.fileIcons>* {
    position: absolute;
}

.fileIcon1 {
    transform: rotate(25deg);
    left: 50px
}

.selectFile {
    position: relative;
}

.selectFile input {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    font-size: 16px;
    padding: 10px;
    opacity: 0;
}

.selectFile button {
    font-size: 16px;
    padding: 10px
}

.titleContainer {
    flex: 1 1 0%;
    display: flex;
    flex-direction: column;
    cursor: pointer;
    overflow: hidden;
}

.userName {
    font-weight: normal;
    font-size: 22px;
    padding-bottom: var(--gap-quarter);
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--accents-6);
}

.realName {
    font-weight: 500;
    font-size: 25px;
    max-width: 350px;
}

.requestContainer {
    font-weight: 600;
    font-size: 18px;
    line-height: 25px;
    position: relative;
    padding: 0px;
    margin: var(--gap-half) 0px 0px;
}

.requestWrapper {
    position: absolute;
    left: 0px;
    top: 0px;
    min-width: 208px;
    line-height: 22px;
    z-index: unset;
    opacity: 1;
}

.requestButton {
    border-radius: var(--radius-tiny);
    background-color: var(--success-light);
    font-size: var(--font-size);
    padding: var(--gap-quarter) var(--gap);
    user-select: none;
}

.userActions {
    position: absolute;
    padding: var(--gap) 0;
    background-color: var(--background);
    border: var(--border);
}

.actionItem {
    width: 100%;
    padding: var(--gap-half);
    border-bottom: var(--border);
    color: var(--accents-7);
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: var(--gap-half);
    font-size: 18px;
}


.dangerAction {
    color: var(--error-light)
}

.actionItem:hover {
    background-color: var(--accents-2);
}

.bio {
    font-weight: 400;
    font-size: 16px;
    line-height: 22px;
    max-width: 450px;
    white-space: pre-line;
    margin-top: 10px;
}

.countInfo {
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    margin-top: 22px;
    color: var(--accents-7)
}

.countItem {
    font-weight: 600;
    font-size: 18px;
    line-height: 25px;
    display: flex;
    -webkit-box-align: baseline;
    align-items: baseline;
    cursor: default;
}

.countItemTitle {
    font-weight: 400;
    font-size: 16px;
    line-height: 22px;
    display: inline-block;
    margin-left: 6px;
    color: var(--accents-6)
}

.actions {
    margin-top: 11px;
    cursor: pointer;
    right: 12px;
    color: var(--accents-6);
    max-height: 10px;
}

.profileBottom {
    margin-bottom: var(--gap-quarter);
}

.editButton {
    background-color: var(--background);
    color: var(--foreground);
    border: var(--border)
}

.showImagesWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

@media screen and (max-width: 850px) {
    .showImagesWrapper {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (max-width: 750px) {
    .profileBottom {
        margin-bottom: 50px
    }
}

@media screen and (max-width: 450px) {
    .showImagesWrapper {
        grid-template-columns: 1fr;
    }
}

.showImageContainer {
    position: relative;
}

.showImage:hover~.showImageEdit {
    display: block;
}

.showImageEdit {
    display: none;
    background-color: var(--accents-7);
    padding: 5px 6px;
    border-radius: 50%;
    text-align: center;
}

.showImageEdit:hover {
    display: block;
}

.followingContent {
    min-height: 50vh;
    max-height: 80vh;
    width: 100%;
    padding: var(--gap);
    overflow-y: auto;
    display: "block"
}


@media only screen and (max-width:500px) {
    .profileBottom {
        margin-bottom: 50px
    }

    .profileTopContainer {
        justify-content: grid;
        place-items: center;
        padding-inline: var(--gap-quarter);
        padding-bottom: 0;
    }

    .followingContent {
        padding: var(--gap) var(--gap-half);
    }


    .infoWrapper {
        display: grid;
        place-items: center;
        text-align: center;
    }

    .infoContainer {
        flex-direction: column;
        align-items: center;
        gap: var(--gap-half)
    }

    .actions {
        position: absolute;
    }

    .userName {
        order: 1
    }

    .requestContainer {
        order: 2;
    }

    .bio {
        text-align: center;
    }
}

